--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>Patterns.Pattern14.pattern14</td></tr>
-<tr><td>Patterns.Pattern14.pattern16</td></tr>
+<tr><td>Arrays.Additionoftwoarrays.Additing</td></tr>
+<tr><td>Arrays.Additionoftwoarrays.merge</td></tr>
+<tr><td>Arrays.Additionoftwoarrays.pattern2</td></tr>
 </table>
